@@ -301,7 +301,7 @@ ILAPI ILimage* ILAPIENTRY iConvertImage(ILimage *Image, ILenum DestFormat, ILenu
 		if (DestType == NewImage->Type)
 			return NewImage;
 
-		NewData = (ILubyte*)ilConvertBuffer(NewImage->SizeOfData, NewImage->Format, DestFormat, NewImage->Type, DestType, NewImage->Data);
+		NewData = (ILubyte*)ilConvertBuffer(NewImage->SizeOfData, NewImage->Format, DestFormat, NewImage->Type, DestType, NULL, NewImage->Data);
 		if (NewData == NULL) {
 			ifree(NewImage);  // ilCloseImage not needed.
 			return NULL;
@@ -362,7 +362,7 @@ ILAPI ILimage* ILAPIENTRY iConvertImage(ILimage *Image, ILenum DestFormat, ILenu
 			memcpy(NewImage->Data, Image->Data, Image->SizeOfData);
 		}
 		else {
-			NewImage->Data = (ILubyte*)ilConvertBuffer(Image->SizeOfData, Image->Format, DestFormat, Image->Type, DestType, Image->Data);
+			NewImage->Data = (ILubyte*)ilConvertBuffer(Image->SizeOfData, Image->Format, DestFormat, Image->Type, DestType, NULL, Image->Data);
 			if (NewImage->Data == NULL) {
 				ifree(NewImage);  // ilCloseImage not needed.
 				return NULL;
