@@ -216,5 +216,12 @@ ILuint ilNVidiaCompressDXTFile(ILubyte *Data, ILuint Width, ILuint Height, ILuin
 	return itellw() - FilePos;  // Return the number of characters written.
 }
 
+#else
+// Let's have this so that the function is always created and exported, even if it does nothing.
+ILAPI ILubyte* ILAPIENTRY ilNVidiaCompressDXT(ILubyte *Data, ILuint Width, ILuint Height, ILuint Depth, ILenum DxtFormat, ILuint *DxtSize)
+{
+	//@TODO: Do we need to set an error message?
+	return NULL;
+}
 
 #endif//IL_NO_DXTC_NVIDIA
